# back-end/src/routes/users.routes.ts
@@ -7,7 +7,7 @@ import { updateUserController } from "@/modules/users/useCases/updateUser";
 
 const userRoutes = Router();
 
-userRoutes.post("/", (request, response, next) => {
+userRoutes.post("/register", (request, response, next) => {
     return createUserController.handle(request, response, next);
 });
 
@@ -24,3 +24,4 @@ userRoutes.post("/", (request, response, next) => {
 });
 
 export { userRoutes };
+
